# amazon-kinesis-video-streams-webrtc-sdk-c-for-freertos

./: .gitmodules
main/: CMakeLists.txt  Common.c  kvsWebRTCClientMaster.c  kvswebrtc_example_main.c
main/lib/libllhttp/: CMakeLists.txt
